# HarmonyOS_Study

HO_soft/Starbucks/: build.gradle
HO_soft/Starbucks/entry/: build.gradle
OHOS/app/an_led/: anled.c  notice.txt
OHOS/app/hled/: hled.c
OHOS/app/my_first_app/: hello_world.c
OHOS/chuankou/: sscom51.ini
OH_hard/HarmonyOS-IoT-Application-Development-master/: .gitignore  BUILD.gn  CC_BY-NC-SA.md  LICENSE  README.md
OH_hard/HarmonyOS-IoT-Application-Development-master/05_network/: BUILD.gn  README.md  net_common.h  net_demo.h  udp_client_test.c
OH_hard/Hi3861/: Hi3516DV300_PINOUT_EN.xlsx  Hi3861开发套件——编程速查.xmind  app-debug.apk
OH_hard/hard/1/: bundle.json
OH_hard/hispark-pegasus-sample-master/26_paho.mqtt.embedded-c/MQTTClient-C/samples/ohos/: BUILD.gn  CMakeLists.txt  mqtt_test.c  mqtt_test.h  mqtt_test_cmsis.c  mqtt_test_posix.c
OH_hard/hispark-pegasus-sample-master/26_paho.mqtt.embedded-c/MQTTClient-C/src/: BUILD.gn  MQTTClient.c  MQTTClient.h
OH_hard/hispark-pegasus-sample-master/26_paho.mqtt.embedded-c/MQTTClient-C/src/ohos/: mqtt_ohos.h  mqtt_ohos_cmsis.c  mqtt_ohos_posix.c
knowledge_demo_smart_home-master/: README.md
knowledge_demo_smart_home-master/Server/: .gitignore  Dockerfile  README.md  pom.xml
knowledge_demo_smart_home-master/dev/device/bearpi/bearpi_hm_nano/sdk_liteos/: .sconsign.dblite  BUILD.gn  config.gni  hm_build.sh
knowledge_demo_smart_home-master/dev/device/bearpi/bearpi_hm_nano/sdk_liteos/app/demo/src/: netcfg_sample.c
knowledge_demo_smart_home-master/dev/device/bearpi/bearpi_hm_nano/sdk_liteos/config/: system_config.h
knowledge_demo_smart_home-master/dev/team_x/common/iot_cloud/: BUILD.gn  iot_cloud.c  iot_profile_package.c
knowledge_demo_smart_home-master/dev/team_x/demo_park/: BUILD.gn  README.md
knowledge_demo_smart_home-master/dev/team_x/demo_park/include/: iot_adc.h  oc_iot_cloud.h  oc_mqtt.h  oc_mqtt_profile_package.h
knowledge_demo_smart_home-master/dev/team_x/demo_park/src/: demo_park.c  iot_adc.c  oc_mqtt.c  oc_mqtt_profile_package.c
knowledge_demo_smart_home-master/dev/team_x/demo_winder/winder/: BUILD.gn
knowledge_demo_smart_home-master/dev/team_x/demo_winder/winder/include/: keypad.h  led.h  netcfg.h  network_config_service.h  pwm.h  sensor.h  winder.h
knowledge_demo_smart_home-master/dev/team_x/demo_winder/winder/src/: keypad.c  led.c  netcfg.c  pwm.c  sensor.c  winder.c
knowledge_demo_smart_home-master/dev/team_x/electronic_board/demo_electronic_board/: BUILD.gn  config.json
knowledge_demo_smart_home-master/dev/team_x/electronic_board/demo_electronic_board/include/: LinkList.h  common.h  electr_board_ability_slice.h  electronic_board_ability.h  link_list.h  schedule_info.h  schedule_list_view.h  schedule_net_status.h  schedule_server.h  sntp.h  ui_config.h  weather_time_view.h
knowledge_demo_smart_home-master/dev/team_x/electronic_board/demo_electronic_board/src/: common.c  electr_board_ability_slice.cpp  electronic_board_ability.cpp  link_list.c  schedule_list_view.cpp  schedule_net_status.c  schedule_server.c  sntp.c  weather_time_view.cpp
knowledge_demo_smart_home-master/dev/team_x/smart_TVOC_detection/demo_smartTVOCdetection/: BUILD.gn  iot_main.c  iot_profile.c  iot_profile.h
knowledge_demo_smart_home-master/dev/team_x/smart_TVOC_detection/demo_smartTVOCdetection/SGP30/: BUILD.gn  SGP30.c  SGP30.h
knowledge_demo_smart_home-master/dev/team_x/smart_cenctrl_board/demo_cenctrl/: BUILD.gn  config.json
knowledge_demo_smart_home-master/dev/team_x/smart_cenctrl_board/demo_cenctrl/include/: camera_ability_slice.h  camera_manager.h  cenctrl_ability.h  cenctrl_ability_slice.h  cenctrl_log.h  event_listener.h  item_list_ctrl.h  native_base.h  socket_service.h  socket_udp.h  ui_camera_config.h  ui_config.h
knowledge_demo_smart_home-master/dev/team_x/smart_cenctrl_board/demo_cenctrl/src/: camera_ability_slice.cpp  camera_manager.cpp  cenctrl_ability.cpp  cenctrl_ability_slice.cpp  item_list_ctrl.cpp  socket_service.c  socket_udp.c
knowledge_demo_smart_home-master/dev/team_x/smart_cleaner/demo_smartcleaner/: BUILD.gn  car_control.c  clean_module.c  control.h  iot_main.c  iot_profile.c  iot_profile.h  robot_control.c  robot_control.h  robot_hcsr04.c  robot_l9110s.c  robot_sg90.c  ssd1306_test.c  trace_model.c
knowledge_demo_smart_home-master/dev/team_x/smart_cleaner/demo_smartcleaner/ssd1306/: BUILD.gn  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.h
knowledge_demo_smart_home-master/dev/team_x/smart_lamp/demo_smartlamp/: BUILD.gn  iot_main.c  iot_profile.c  iot_profile.h
knowledge_demo_smart_home-master/dev/team_x/smart_lamp/demo_smartlamp/E53_SC1/: BUILD.gn  E53_SC1.c  E53_SC1.h
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/: BUILD.gn  app_button.c  app_button.h  app_gsm.c  app_gsm.h  app_phonePage.c  app_phonePage.h  app_time.c  app_time.h  app_weather.c  app_weather.h  iot_main.c  iot_profile.c  iot_profile.h
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/font/: background.c
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/: font.h  lcd_st7789.c  lcd_st7789.h
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/GUI/: BUILD.gn  lv_conf.h
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/GUI/lv_examples/: BUILD.gn
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/GUI/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/GUI/lvgl/: BUILD.gn
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/GUI/lvgl/src/lv_objx/: lv_label.c
knowledge_demo_smart_home-master/dev/team_x/smart_watch/demo_smartwatch/lcd/GUI/lvgl_driver/: BUILD.gn  lv_port_disp.c
knowledge_demo_smart_home-master/profile/: README.md  alarm_info.md  智能养花机profile定义.md  智能可燃气体检测系统profile定义.md  智能台灯profile定义.md  智能垃圾桶profile定义.md  智能手表profile定义.md  智能扫地机profile定义.md  智能烟雾检测系统profile定义.md  智能甲醛检测系统profile定义.md  智能窗帘profile定义.md  智能风扇profile定义.md
(+708 files in other folders)
