# Copyright (c) 2020, HiHope Community.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its
#    contributors may be used to endorse or promote products derived from
#    this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

if (board_name == "hi3861v100") {

static_library("net_demo") {
    # uncomment one of following line, to enable one test:
    sources = ["tcp_client_test.c"]
    # sources = ["tcp_server_test.c"]
    # sources = ["udp_client_test.c"]
    # sources = ["udp_server_test.c"]

    sources += ["demo_entry_cmsis.c", "wifi_connecter.c"]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
    ]
}

} else { # for hi3516dv300 and hi3518ev300

common_sources = ["demo_entry_posix.c"]

executable("tcp_client_test") {
    sources = common_sources
    sources += ["tcp_client_test.c"]
}

executable("tcp_server_test") {
    sources = common_sources
    sources += ["tcp_server_test.c"]
}

executable("udp_client_test") {
    sources = common_sources
    sources += ["udp_client_test.c"]
}

executable("udp_server_test") {
    sources = common_sources
    sources += ["udp_server_test.c"]
}

group("net_demo") {
    deps = [
        ":tcp_client_test",
        ":tcp_server_test",
        ":udp_client_test",
        ":udp_server_test",
    ]
}

}

