#  Copyright (c) 2021 KaiHong Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("demo_park") {
    sources = [
        "src/demo_park.c",
        "src/iot_wifi.c",
        "src/iot_adc.c",
        "src/oc_mqtt_profile_package.c",
        "src/oc_mqtt.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    
    include_dirs = [        
        "//utils/native/lite/include",        
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//third_party/cJSON",
        "//third_party/paho_mqtt/MQTTClient-C/src",
        "//third_party/paho_mqtt/MQTTPacket/src",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "include"
    ]
    deps = [ 
            "//third_party/paho_mqtt:pahomqtt_static",
    ]

}
