# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("iot_cloud") {
    sources = [
        "iot_cloud.c",
        "iot_profile_package.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += [ "-Wno-unused-parameter" ]
    
    include_dirs = [
        "//third_party/cJSON",
        "//third_party/iot_link/inc",
        "//third_party/iot_link/oc_mqtt/oc_mqtt_al",
        "//third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
        "//third_party/iot_link/queue",
        "../inc",
    ]

    deps = [ 
             "//third_party/iot_link:iot_link",
    ]

}
