# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/hap_pack.gni")

shared_library("electrBoard") {
  sources = [
    "src/electronic_board_ability.cpp",
    "src/electr_board_ability_slice.cpp",
    "src/weather_time_view.cpp",
    "src/schedule_list_view.cpp",
    "src/sntp.c",
    "src/link_list.c",
    "src/schedule_server.c",
    "src/schedule_net_status.c",
    "src/common.c"
  ]
  
  deps = [
    "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
    "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface",
    "//foundation/graphic/ui:lite_ui",
    "//foundation/graphic/utils:lite_graphic_utils",
    "//foundation/multimedia/camera_lite/frameworks:camera_lite",
    "//foundation/multimedia/media_lite/frameworks/recorder_lite:recorder_lite",
    "//utils/native/lite/kv_store:kv_store",
  ]

  include_dirs = [
    "include",
    "${aafwk_lite_path}/interfaces/kits/ability_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "//base/startup/syspara_lite/interfaces/kits",
    "//foundation/multimedia/camera_lite/interfaces/kits",
    "//foundation/graphic/utils/interfaces/kits/gfx_utils",
    "//third_party/cJSON",
  ]

  ldflags = [
    "-L$ohos_root_path/sysroot/usr/lib",
    "-Wl,-rpath-link=$ohos_root_path/sysroot/usr/lib",
    "-lstdc++",
    "-lcamera_lite",
    "-lsurface",
    "-lrecorder_lite",
  ]
  defines = [
    "ENABLE_WINDOW=1",
    "ABILITY_WINDOW_SUPPORT",
  ]

}
