#Copyright(c) 2021 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the license is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permisssions and
#limitations under the License.

import("//build/lite/config/hap_pack.gni")
shared_library("cenctrl"){
    sources = [
        "src/cenctrl_ability.cpp",
        "src/cenctrl_ability_slice.cpp",
        "src/camera_ability_slice.cpp",
        "src/camera_manager.cpp",
        "src/socket_service.c",
        "src/socket_udp.c",
        "src/item_list_ctrl.cpp"
    ]
    deps = [
        "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
        "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
        "//foundation/communication/ipc_lite:liteipc_adapter",
        "//foundation/distributedschedule/samgr_lite/samgr:samgr",
        "//foundation/graphic/surface",
        "//foundation/graphic/ui:lite_ui",
        "//foundation/graphic/utils:lite_graphic_utils",
        "//foundation/multimedia/media_lite/frameworks/player_lite:player_lite",
        "//foundation/multimedia/media_lite/frameworks/recorder_lite:recorder_lite",
        "//foundation/multimedia/camera_lite/frameworks:camera_lite",
        "//utils/native/lite/kv_store:kv_store",
    ]

    include_dirs = [
        "include",
        "${aafwk_lite_path}/interfaces/kits/ability_lite",
        "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
        "${aafwk_lite_path}/interfaces/kits/want_lite",
        "//base/startup/syspara_lite/interfaces/kits",
        "//foundation/multimedia/camera_lite/interfaces/kits",
        "//foundation/multimedia/media_lite/interfaces/kits/player_lite",
        "//foundation/graphic/utils/interfaces/kits/gfx_utils"
    ]

    ldflags = [ "-shared" ]
    ldflags += [ "-lstdc++" ]
    ldflags += [ "-lpthread" ]
    ldflags += [ "-L$ohos_root_path/sysroot/usr/lib" ]
    ldflags += [ "-Wl,-rpath-link=$ohos_root_path/sysroot/usr/lib" ]
    ldflags += [
        "-lui",
        "-lsurface",
        "-lplayer_lite",
        "-lcamera_lite",
        "-lability",
    ]

    defines = [
        "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
        "ENABLE_WINDOW=1",
        "ABILITY_WINDOW_SUPPORT"
    ]
}
