# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("smart_cleaner") {
    sources = [
        "robot_hcsr04.c",
        "car_control.c",
        "robot_sg90.c",
        "trace_model.c",
        "clean_module.c",
        "ssd1306_test.c",
        "robot_control.c",
        "iot_main.c",
        "iot_profile.c",
    ]

    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += [ "-Wno-unused-parameter" ]

    include_dirs = [
        "./ssd1306",
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
         "../../common/inc",
         "//foundation/commucation/wifi_lite/interfaces/wifiservice",
        "//kernel/liteos_m/kal",
        "//utils/native/lite/include",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libsec/include",
        "//third_party/cJSON",
    ]
    
        deps = [ 
         "ssd1306:oled_ssd1306",
         "../../common/iot_sntp:iot_sntp",
         "../../common/iot_wifi:iot_wifi",
         "../../common/iot_schedule:iot_schedule",
         "../../common/iot_cloud:iot_cloud",
         "../../common/hals:hals"
         
    ]
}


